2002-12-12  Adam Byrtek  <alpha@debian.org>

	* extfs/apt.in: Add non-interactive remove using dpkg.

2002-12-11  Adam Byrtek  <alpha@debian.org>

	* extfs/apt.in: Add 1 to the month number.  Perl localtime()
	uses range 0..11 while extfs expects range 1..12.
	* extfs/deba.in: Likewise.
	* extfs/debd.in: Likewise.
	* extfs/dpkg.in: Likewise.

	* extfs/audio: Move ...
	* extfs/audio.in: ... here.  Add CDDB support.
	* extfs/Makefile.am: Adjust for the above.

2002-12-11  Pavel Roskin  <proski@gnu.org>

	* extfs/mailfs: Try using UnixDate() from Date::Manip if it's
	available.  Warning fix.

2002-12-11  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/patchfs: Use quotemeta() before giving filename to
	shell.

	* vfs.c (mc_stat): Make first argument const.
	(mc_lstat): Likewise.
	* vfs.h: Adjust declarations and remove some useless defines.

2002-12-10  Pavel Roskin  <proski@gnu.org>

	* extfs/a: Enable Perl warnings.  Ignore entries without a date.
	Warning fixes.  Don't redirect stderr to /dev/null - it doesn't
	mess the screen now.

2002-12-09  Adam Byrtek  <alpha@debian.org>

	* extfs/patchfs: Rewritten in Perl.  File size is now displayed
	properly.

2002-12-09  Pavel Roskin  <proski@gnu.org>

	* extfs/ftplist.in: Remove, it's obsoleted by the hotlist.
	* extfs/ucpio.in: Remove, it's obsoleted by cpio.c.
	* extfs/Makefile.am: Remove all references to them.
	* extfs/extfs.ini: Likewise.

	* extfs.c (__find_entry): When creating entries for regular
	files, set initial permissions to S_IFREG | 0666.  This fixes
	problems with viewing and editing newly added files.

	* extfs/bpp: Fix file sizes, contents of INSTALL and UPGRADE.

2002-12-08  Pavel Roskin  <proski@gnu.org>

	* extfs/uar.in: Fix "copyin" command.

2002-12-06  Pavel Roskin  <proski@gnu.org>

	* extfs.c (extfs_open): Don't run "copyout" if the file just has
	been created or O_TRUNC is given in the flags.
	Reported by Adam Byrtek 'alpha' <alpha@irc.pl>

	* extfs/uar.in: Implement "copyin" and "rm" commands.
